# funasr

./: .gitignore  CLAUDE.md  README.md  api_server.py  async_test.py  common.py  consul.py  consul_service.py  cos.py  dashscope-asr.py  dify.py  hotword  hotword.txt  mp_test.py  parallel.py  pool_test.py  pyproject.toml  sca.py  test.py  utils.py  worker.py
doc/: dashboard_result.json  local_model_result.json
